--- a/package.json
+++ b/package.json
@@ -27,15 +27,16 @@
   },
   "devDependencies": {
     "@babel/core": "^7.7.7",
-    "@storybook/addon-actions": "^5.2.8",
+    "@storybook/addon-actions": "^6.5.15",
     "@storybook/addon-links": "^5.2.8",
     "@storybook/addon-storyshots": "^5.2.8",
     "@storybook/addons": "^5.2.8",
-    "@storybook/vue": "^5.2.8",
-    "@vue/cli-plugin-babel": "^4.1.0",
-    "@vue/cli-plugin-eslint": "^4.1.0",
-    "@vue/cli-plugin-unit-jest": "^4.1.1",
-    "@vue/cli-service": "^4.1.0",
+    "@storybook/vue": "^6.1.21",
+    "@vue/cli-plugin-babel": "^5.0.8",
+    "@vue/cli-plugin-eslint": "^5.0.8",
+    "@vue/cli-plugin-unit-jest": "^5.0.8",
+    "@vue/cli-service": "^5.0.8",
+    "@vue/compiler-sfc": "^3.2.45",
     "@vue/test-utils": "^1.0.0-beta.30",
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
@@ -43,10 +44,9 @@
     "cypress": "^6.0.1",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
-    "html-webpack-plugin": "^3.2.0",
-    "jest": "^24.9.0",
+    "html-webpack-plugin": "^5.5.0",
+    "jest": "^29.3.1",
     "vue-loader": "^15.8.3",
-    "vue-template-compiler": "^2.6.14",
     "webpack": "^4.41.4",
     "webpack-cli": "^3.3.10"
   },
