--- a/package.json
+++ b/package.json
@@ -42,11 +42,12 @@
     "babel-loader": "^8.0.6",
     "babel-preset-vue": "^2.0.2",
     "cypress": "^6.0.1",
-    "eslint": "^5.16.0",
-    "eslint-plugin-vue": "^5.0.0",
+    "eslint": "^7.32.0",
+    "eslint-plugin-vue": "^5.2.3",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^29.3.1",
-    "vue-loader": "^15.8.3",
+    "ts-loader": "^9.4.2",
+    "vue-loader": "^17.0.1",
     "webpack": "^4.41.4",
     "webpack-cli": "^3.3.10"
   },
